# cursor-estimation

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/Kalman/: CMakeLists.txt
lib/Kalman/include/: ExtendedVelocityKalmanFilter.hpp  KalmanFilter.hpp  VelocityKalmanFilter.hpp
lib/Kalman/src/: ExtendedVelocityKalmanFilter.cpp  KalmanFilter.cpp  VelocityKalmanFilter.cpp
lib/SFMLTools/: CMakeLists.txt
lib/SFMLTools/include/: Legend.hpp  LineDrawer.hpp
lib/SFMLTools/src/: Legend.cpp  LineDrawer.cpp
scripts/: build.sh  run.sh
velocitydemo/: CMakeLists.txt
velocitydemo/include/: NoiseGenerator.hpp  NoisyVelocityKalmanModel.hpp
velocitydemo/src/: NoiseGenerator.cpp  NoisyVelocityKalmanModel.cpp  main.cpp
